--- a/app/src/main/res/values/strings_key.xml
+++ b/app/src/main/res/values/strings_key.xml
@@ -10,6 +10,8 @@
     <string name="sp_location">SP_LOCATION_9</string>
     <string name="sp_omnibox_control">SP_OMNIBOX_CONTROL_9</string>
     <string name="sp_search_engine">SP_SEARCH_ENGINE_9</string>
+    <string name="sp_user_agent">SP_USER_AGENT_9</string>
+    <string name="sp_user_agent_custom">SP_USER_AGENT_CUSTOM_9</string>
     <string name="sp_search_engine_custom">SP_SEARCH_ENGINE_CUSTOM_9</string>
 
     <!-- Clear -->
