--- a/app/src/main/res/values/strings_key.xml
+++ b/app/src/main/res/values/strings_key.xml
@@ -19,5 +19,6 @@
     <string name="sp_clear_cache">SP_CLEAR_CACHE_9</string>
     <string name="sp_clear_cookie">SP_CLEAR_COOKIE_9</string>
     <string name="sp_clear_history">SP_CLEAR_HISTORY_9</string>
+    <string name="sp_clear_siteData">SP_CLEAR_SITEDATA_9</string>
 
 </resources>
