--- a/app/src/main/res/xml/preference_ui.xml
+++ b/app/src/main/res/xml/preference_ui.xml
@@ -9,14 +9,14 @@
         android:summary="@string/setting_summary_themeDark"/>
 
     <CheckBoxPreference
-        android:defaultValue="true"
+        android:defaultValue="false"
         android:icon="@drawable/icon_exit"
         android:key="sp_close_browser_confirm"
         android:title="@string/setting_title_confirm_exit"
         android:summary="@string/setting_summary_confirm_exit" />
 
     <CheckBoxPreference
-        android:defaultValue="true"
+        android:defaultValue="false"
         android:icon="@drawable/icon_close"
         android:key="sp_close_tab_confirm"
         android:title="@string/setting_title_confirm_tab_close"
