--- a/app/src/main/res/layout/dialog_menu.xml
+++ b/app/src/main/res/layout/dialog_menu.xml
@@ -409,7 +409,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginEnd="16dp"
                     android:gravity="center_vertical"
-                    android:src="@drawable/icon_earth" />
+                    android:src="@drawable/icon_home" />
 
                 <TextView
                     android:layout_width="match_parent"
